add scroll top top button

--- a/themes/husserl/view/layout/layout.phtml
+++ b/themes/husserl/view/layout/layout.phtml
@@ -61,6 +61,11 @@ if (strpos($url, 'page/home') !== false) {
         <span class="burger-icon__burger-line burger-line"></span>
       </div>
     </nav>
+    <div class="scroll-to-top-button">
+      <svg width="21" height="12" viewBox="0 0 21 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M11.559 0.439367C10.9733 -0.146456 10.022 -0.146456 9.43629 0.439367L0.439306 9.43761C-0.146437 10.0234 -0.146437 10.9748 0.439306 11.5606C1.02505 12.1465 1.97629 12.1465 2.56203 11.5606L10.5 3.62156L18.438 11.5559C19.0237 12.1418 19.975 12.1418 20.5607 11.5559C21.1464 10.9701 21.1464 10.0187 20.5607 9.43292L11.5637 0.43468L11.559 0.439367Z" fill="#202020"/>
+      </svg>
+    </div>
     <div class="page content">    
       <?php echo $this->content; ?>            
     </div> 
