add border color

--- a/themes/husserl/asset/sass/00_common/_variables.scss
+++ b/themes/husserl/asset/sass/00_common/_variables.scss
@@ -25,6 +25,7 @@ $colors: (
     //border-colors
     primary-border-color: #202020,
     secondary-border-color: #BEBEBE,
+    third-border-color: #5d2510,
 );
 
 $fonts: (
