--- a/themes/husserl/asset/sass/04_organisms/aside/_browse-tree-structure.scss
+++ b/themes/husserl/asset/sass/04_organisms/aside/_browse-tree-structure.scss
@@ -15,6 +15,7 @@
 
             .browse-item {
                 position: relative;
+                cursor: pointer;
 
                 a {
                     width: 100%;
