when page is fixed delete scroll-to-top button

--- a/themes/husserl/asset/sass/06_pages/_all-pages.scss
+++ b/themes/husserl/asset/sass/06_pages/_all-pages.scss
@@ -2,6 +2,14 @@
     position: fixed;
 }
 
+body:has(.pageFixed) {
+    overflow: hidden;
+    
+    .scroll-to-top-button {
+        z-index: 0;
+    }
+}
+
 .container {
     display: flex;
     flex-direction: column;
