--- a/themes/husserl/view/omeka/site/item/browse.phtml
+++ b/themes/husserl/view/omeka/site/item/browse.phtml
@@ -50,7 +50,6 @@ if (isset($_GET['requestedItem'])) :
 endif;
 
 ?>
-
 <div class="page-content browse-page">
     <div class="browse-page__browse-top-section browse-top-section">
         <div class="browse-top-section__page-breadcrumb page-breadcrumb">
@@ -73,17 +72,17 @@ endif;
             <p class="page-information__page-information-text page-information-text body-text">Lorem ipsum dolor sit amet consectetur. Laoreet nisl tincidunt sit est. Nulla pellentesque neque tellus dolor lectus. Dictumst et nunc nec volutpat justo diam ac nam. Magna ultricies porttitor sagittis aliquet blandit purus pellentesque tempor.</p>
         </div>
     </div>
-    <div class="browse-page__browse-result-section browse-result-section">
+    <div class="browse-page__browse-result-section browse-result-section result-wrapper">
         <aside class="browse-result-section__browse-aside browse-aside browse-search-aside">
-            <div class="browse-aside__browse-nav browse-nav">
-                <div class="browse-nav__nav-aside-item nav-aside-item">
-                    <a href="<?= $site->url() ?>/search" class="nav-aside-item__nav-aside-item-text nav-aside-item-text filter-item-nav">Filter</a>
+            <div class="browse-aside__browse-nav browse-nav browse-search-nav">
+                <a href="<?= $site->url() ?>/search" class="browse-nav__nav-aside-item nav-aside-item">
+                    <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text filter-item-nav">Filter</p>
                     <div class="nav-aside-item__nav-aside-item-icon nav-aside-item-icon filter-icon">          
                         <svg width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0.677991 1.5502L0.679868 1.54629C0.983287 0.907569 1.62722 0.5 2.34372 0.5H27.6592C28.3757 0.5 29.0196 0.907569 29.323 1.54629C29.6266 2.18542 29.5349 2.93746 29.084 3.48549C29.0839 3.48553 29.0839 3.48558 29.0839 3.48562L18.3661 16.4829L18.2519 16.6214V16.801V24.1925C18.2519 24.706 17.9613 25.1772 17.4941 25.407C17.0205 25.6398 16.4657 25.5905 16.0507 25.2806L16.0501 25.2801L12.2996 22.4887L12.2972 22.4869C11.9525 22.2335 11.751 21.8315 11.751 21.401V16.801V16.6214L11.6368 16.4828L0.913473 3.48016C0.913371 3.48004 0.913269 3.47991 0.913168 3.47979C0.466625 2.93584 0.372343 2.17948 0.677991 1.5502Z" stroke="#202020"/>
                         </svg>
                     </div>
-                </div>
+                    </a>
                 <div class="browse-nav__nav-aside-item nav-aside-item middle-item">
                     <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text">|</p>
                 </div>
@@ -102,7 +101,7 @@ endif;
                 <? if (isset($_GET['requestedItem'])) :?>
                     <ul class="browse-aside__browse-top-items browse-top-items browse-items">
                         <?php if($resPathId[0] == 9013):?>
-                            <li class="browse-items__browse-item browse-item open big-body-text"><a href="<?= $site->url()?>/item/browse/?requestedItem=9013" onclick="saveBrowseData()">Manuscripten</a>
+                            <li class="browse-items__browse-item browse-item open big-body-text"><p class="browse-item-link" data-link="<?= $site->url() . '/item/browse/?requestedItem=9013' ?>" onclick="saveBrowseData(event)">Manuscripten</p>
                                 <?php function renderChildren($resPathId, $site, $test, $j = 0, $parentId = null){ ?>
                                     <?php
                                         $id = getId($j, $parentId); // Get the id based on the depth of the parent id and the parent id itself
@@ -127,9 +126,9 @@ endif;
                                                 ?>
                                                 <?php // write out the child and add on li element classes based on the state of the element ?>
                                                 <li class="browse-items__browse-item browse-item <?= (isset($resPathId[$j + 1]) && $childId == $resPathId[$j + 1]) ? 'open' : 'close'; ?> big-body-text <?= ($template == "ManuscriptFolder") ? 'folder' : 'page'; ?>">
-                                                    <a href="<?= $site->url() . '/item/browse/?requestedItem=' . $childId ; ?>" onclick="saveBrowseData()">
+                                                    <p class="browse-item-link" data-link="<?= $site->url() . '/item/browse/?requestedItem=' . $childId ; ?>" onclick="saveBrowseData(event)">
                                                         <?= $child['val']->resource()->value("dcterms:identifier");?>
-                                                    </a>
+                                                    </p>
                                                     <?php // Check if there is an next id in the path and if the id is the same as the id of the child ?>
                                                     <?php if (isset($resPathId[$j + 1]) && $childId == $resPathId[$j + 1]) :?>
                                                         <?php // Call the function recursive again with a new index and with the childId that now become the new parent ?>
@@ -168,4 +167,3 @@ endif;
         </aside>
     </div>
 </div>
-
