--- a/themes/husserl/view/search/search.phtml
+++ b/themes/husserl/view/search/search.phtml
@@ -68,7 +68,7 @@ $this->htmlElement('body')->appendAttribute('class', 'search-page item-set resou
         <div class="container__page-breadcrumb page-breadcrumb">
             <ul class="page-breadcrumb__breadcrumb-list breadcrumb-list">
                 <li class="breadcrumb-listt_breadcrumb-item breadcrumb-item body-text"><a href="<?= $site->url();?>">Home</a></li>
-                <li class="breadcrumb-listt_breadcrumb-item breadcrumb-item body-text"><a href="<?= $site->url();?>/collections">Collections</a></li>
+                <li class="breadcrumb-listt_breadcrumb-item breadcrumb-item body-text"><a href="<?= $site->url();?>/page/collections">Collections</a></li>
                 <li class="breadcrumb-listt_breadcrumb-item breadcrumb-item body-text"><a href="<?= $searchConfig->siteUrl()?>">Search</a></li>
             </ul>
         </div>
@@ -79,11 +79,11 @@ $this->htmlElement('body')->appendAttribute('class', 'search-page item-set resou
             </p>
         </div>
     </div>
-    <div class="search__search-wrapper search-wrapper">
-        <aside class="search-wrapper__browse-search-aside browse-search-aside">
-            <div class="browse-search-aside__search-aside search-aside search-nav search-nav">
-                <div class="search-nav__nav-aside-item nav-aside-item active">
-                    <a href="<?= $site->url() ?>/search" class="nav-aside-item__nav-aside-item-text nav-aside-item-text filter-item-nav">Filter</a>
+    <div class="search__search-wrapper search-wrapper result-wrapper">
+        <aside class="search-wrapper__browse-search-aside browse-search-aside search-aside">
+            <div class="search-aside__search-nav search-nav browse-search-nav">
+                <div class="search-nav__nav-aside-item nav-aside-item filter-item-nav">
+                    <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text filter-item-nav">Filter</p>
                     <div class="nav-aside-item__nav-aside-item-icon nav-aside-item-icon filter-icon">          
                         <svg width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0.677991 1.5502L0.679868 1.54629C0.983287 0.907569 1.62722 0.5 2.34372 0.5H27.6592C28.3757 0.5 29.0196 0.907569 29.323 1.54629C29.6266 2.18542 29.5349 2.93746 29.084 3.48549C29.0839 3.48553 29.0839 3.48558 29.0839 3.48562L18.3661 16.4829L18.2519 16.6214V16.801V24.1925C18.2519 24.706 17.9613 25.1772 17.4941 25.407C17.0205 25.6398 16.4657 25.5905 16.0507 25.2806L16.0501 25.2801L12.2996 22.4887L12.2972 22.4869C11.9525 22.2335 11.751 21.8315 11.751 21.401V16.801V16.6214L11.6368 16.4828L0.913473 3.48016C0.913371 3.48004 0.913269 3.47991 0.913168 3.47979C0.466625 2.93584 0.372343 2.17948 0.677991 1.5502Z" stroke="#202020"/>
@@ -93,15 +93,15 @@ $this->htmlElement('body')->appendAttribute('class', 'search-page item-set resou
                 <div class="search-nav__nav-aside-item nav-aside-item middle-item">
                     <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text">|</p>
                 </div>
-                <div class="search-nav__nav-aside-item nav-aside-item browse-item-nav">
-                    <a href="<?= $site->url() ?>/item/browse" class="nav-aside-item__nav-aside-item-text nav-aside-item-text">Browse</a>
+                <a href="<?= $site->url() ?>/item/browse" class="search-nav__nav-aside-item nav-aside-item browse-item-nav">
+                    <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text">Browse</p>
                     <div class="nav-aside-item__nav-aside-item-icon nav-aside-item-icon browse-icon">
                         <svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M20.8847 0.904337L20.8861 0.905667L21.664 1.67777C21.6643 1.678 21.6645 1.67823 21.6647 1.67846C22.1088 2.12218 22.7098 2.375 23.3418 2.375H29.125C29.886 2.375 30.5 2.98903 30.5 3.75V11.25C30.5 12.011 29.886 12.625 29.125 12.625H16C15.239 12.625 14.625 12.011 14.625 11.25V1.875C14.625 1.11403 15.239 0.5 16 0.5H19.9141C20.2778 0.5 20.6257 0.645352 20.8847 0.904335L20.8847 0.904337ZM16 17.375H16.0007L19.9141 17.3691C19.9143 17.3691 19.9145 17.3691 19.9147 17.3691C20.2782 17.3693 20.6259 17.5146 20.8847 17.7735L21.664 18.5528C22.1082 18.9969 22.7095 19.25 23.3418 19.25H29.125C29.886 19.25 30.5 19.864 30.5 20.625V28.125C30.5 28.886 29.886 29.5 29.125 29.5H16C15.239 29.5 14.625 28.886 14.625 28.125V18.75C14.625 17.989 15.239 17.375 16 17.375Z" stroke="black"/>
                             <path d="M1 1.875V6.5625M10.375 24.375H1V6.5625M1 6.5625H9.4375" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                </div>
+                </a>
             </div>
             <?= $partial('search/facets-list') ?>
         </aside>
@@ -112,7 +112,7 @@ $this->htmlElement('body')->appendAttribute('class', 'search-page item-set resou
                 </div>
             <?php endif; ?>
             <?php if ($documentCount): ?>
-                <div class="search-results__search-results-part search-results-part search-results-list">
+                <div class="search-results__search-results-part search-results-part">
                     <?php foreach (array_filter($response->getResourceTotalResults()) as $resourceType => $count): ?>
                         <?= $partial('search/results', $variables + ['resourceType' => $resourceType]) ?>
                     <?php endforeach; ?>
