change name + add 2 colors

--- a/themes/husserl/asset/sass/00_common/_variables.scss
+++ b/themes/husserl/asset/sass/00_common/_variables.scss
@@ -15,6 +15,7 @@ $colors: (
     fourth-bg-color: #5D2510,
     fifth-bg-color: #E2D1CB,
     sixth-bg-color: #202020,
+    seventh-bg-color: #BBBBBB,
 
     //text-colors
     primary-text-color: #202020,
@@ -26,6 +27,7 @@ $colors: (
     primary-border-color: #202020,
     secondary-border-color: #BEBEBE,
     third-border-color: #5d2510,
+    fourth-border-color: #BBBBBB,
 );
 
 $fonts: (
@@ -45,7 +47,7 @@ $fontweights: (
 $fontsizes: (
     h1-desktop: 74px,
     h1-mobile: 46px,
-    h2-dektop: 48px,
+    h2-desktop: 48px,
     h2-mobile: 40px,
     h3-desktop: 36px,
     h3-mobile: 32px,
