--- a/themes/husserl/asset/sass/04_organisms/page-blocks/_hero-block.scss
+++ b/themes/husserl/asset/sass/04_organisms/page-blocks/_hero-block.scss
@@ -46,6 +46,7 @@
 
         .hero-text-section {
             height: 100%;
+            max-width: 900px;
             display: flex;
             align-items: flex-end;
             z-index: 1;
