--- a/themes/husserl/asset/sass/04_organisms/sliders/_item-pictures.scss
+++ b/themes/husserl/asset/sass/04_organisms/sliders/_item-pictures.scss
@@ -1,12 +1,93 @@
-.item-pictures-slider {
-    .item-picture-nav {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        gap: 30px;
+.sticky-section-wrapper {
+    .sticky-info-wrapper  {
+        .item-pictures-slider.info-wrapper-image {
+            width: 100%;
+            height: auto;
+            background-color: transparent;
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
+            
+            .picture-slider-track {
+                .picture-slider-track-list {
+                    .image-slider-item {
+                        height: 550px;
+                        background-color: var(--third-bg-color);
+        
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+                }
+            }     
+            .item-images-nav {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                gap: 30px;
+        
+                .splide__arrow--prev, .splide__arrow--next, .splide__pagination {
+                    all: unset;
+                }
+                .splide__arrow--prev, .splide__arrow--next {
+                    width: 16px;
+                    height: 29px;
+        
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }    
+                .splide__arrow--prev {
+                    transform: rotate(180deg);
+                }
+                .splide__arrow:disabled {
+                    opacity: 0.3;
+                }
+                .splide__pagination__page {
+                    background-color: var(--seventh-bg-color);
+                    opacity: 1;
+                }
+                .splide__pagination__page.is-active {
+                    background-color: var(--fourth-bg-color);
+                    transform: unset;
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
 
-        .splide__arrow--prev, .splide__arrow--next, .splide__pagination {
-            all: unset;
+//desktop
+@media screen and (min-width: 1024px){
+    .sticky-section-wrapper {
+        .sticky-info-wrapper {
+            .item-pictures-slider.info-wrapper-image {
+                width: calc(40% - 60px);
+                height: calc(100vh - 100px);
+                position: sticky;
+                top: 120px;
+
+                .picture-slider-track {
+                    height: 100%;
+
+                    .picture-slider-track-list {
+                        height: 100%;
+
+                        .image-slider-item {
+                            height: calc(100vh - 150px);
+                        }
+                    }
+                }
+            }
+            .sticky-scrollable-content:last-child {
+                margin-bottom: 50px;
+            }
         }
     }
 }
